--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,7 @@
     "app": {
       "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "application",
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -14,9 +14,9 @@
       "root": "apps/app",
       "sourceRoot": "apps/app/src",
       "prefix": "app",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "executor": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/apps/app",
             "index": "apps/app/src/index.html",
@@ -128,7 +128,7 @@
           "outputs": ["{options.outputPath}"]
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "executor": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "app:build"
           },
@@ -142,13 +142,13 @@
           }
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "executor": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "app:build"
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/app"],
           "options": {
             "jestConfig": "apps/app/jest.config.js",
@@ -164,9 +164,9 @@
       "root": "libs/auth",
       "sourceRoot": "libs/auth/src",
       "prefix": "stf",
-      "architect": {
+      "targets": {
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/auth"],
           "options": {
             "jestConfig": "libs/auth/jest.config.js",
@@ -174,7 +174,7 @@
           }
         }
       },
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -188,9 +188,9 @@
       "root": "libs/common",
       "sourceRoot": "libs/common/src",
       "prefix": "stf",
-      "architect": {
+      "targets": {
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/common"],
           "options": {
             "jestConfig": "libs/common/jest.config.js",
@@ -198,7 +198,7 @@
           }
         }
       },
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -212,9 +212,9 @@
       "root": "libs/components",
       "sourceRoot": "libs/components/src",
       "prefix": "ncom",
-      "architect": {
+      "targets": {
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/components"],
           "options": {
             "jestConfig": "libs/components/jest.config.js",
@@ -222,7 +222,7 @@
           }
         }
       },
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -236,9 +236,9 @@
       "root": "libs/core",
       "sourceRoot": "libs/core/src",
       "prefix": "stf",
-      "architect": {
+      "targets": {
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/core"],
           "options": {
             "jestConfig": "libs/core/jest.config.js",
@@ -246,7 +246,7 @@
           }
         }
       },
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -260,9 +260,9 @@
       "root": "apps/desktop",
       "sourceRoot": "apps/desktop/src",
       "prefix": "da",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "executor": "@angular-devkit/build-angular:browser",
           "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/desktop",
@@ -358,7 +358,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "executor": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
               "browserTarget": "desktop:build:production"
@@ -373,19 +373,19 @@
           }
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "executor": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "desktop:build"
           }
         },
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["apps/desktop/src/**/*.ts", "apps/desktop/src/**/*.html"]
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/desktop"],
           "options": {
             "jestConfig": "apps/desktop/jest.config.js",
@@ -400,9 +400,9 @@
       "root": "apps/desktop/electron",
       "sourceRoot": "apps/desktop/electron/src",
       "projectType": "application",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "nx-electron:build",
+          "executor": "nx-electron:build",
           "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/desktop-electron",
@@ -425,13 +425,13 @@
           }
         },
         "serve": {
-          "builder": "nx-electron:execute",
+          "executor": "nx-electron:execute",
           "options": {
             "buildTarget": "desktop-electron:build"
           }
         },
         "package": {
-          "builder": "nx-electron:package",
+          "executor": "nx-electron:package",
           "options": {
             "name": "desktop-electron",
             "frontendProject": "desktop",
@@ -440,7 +440,7 @@
           }
         },
         "make": {
-          "builder": "nx-electron:make",
+          "executor": "nx-electron:make",
           "options": {
             "name": "desktop-electron",
             "frontendProject": "desktop",
@@ -448,14 +448,14 @@
           }
         },
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "outputs": ["{options.outputFile}"],
           "options": {
             "lintFilePatterns": ["apps/desktop/electron/**/*.ts"]
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/desktop/electron"],
           "options": {
             "jestConfig": "apps/desktop/electron/jest.config.js",
@@ -467,7 +467,7 @@
     "manager": {
       "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "application",
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -476,9 +476,9 @@
       "root": "apps/manager",
       "sourceRoot": "apps/manager/src",
       "prefix": "app",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "executor": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/apps/manager",
             "index": "apps/manager/src/index.html",
@@ -589,7 +589,7 @@
           "outputs": ["{options.outputPath}"]
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "executor": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "manager:build"
           },
@@ -603,13 +603,13 @@
           }
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "executor": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "manager:build"
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/manager"],
           "options": {
             "jestConfig": "apps/manager/jest.config.js",
@@ -625,9 +625,9 @@
       "root": "libs/pastanaga",
       "sourceRoot": "libs/pastanaga/src",
       "prefix": "stf",
-      "architect": {
+      "targets": {
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/pastanaga"],
           "options": {
             "jestConfig": "libs/pastanaga/jest.config.js",
@@ -635,7 +635,7 @@
           }
         }
       },
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "style": "scss",
           "changeDetection": "OnPush"
@@ -648,22 +648,22 @@
       "root": "libs/sdk-core",
       "sourceRoot": "libs/sdk-core/src",
       "projectType": "library",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@nrwl/workspace:run-commands",
+          "executor": "@nrwl/workspace:run-commands",
           "options": {
             "commands": ["yarn sdk-build"]
           }
         },
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["libs/sdk-core/**/*.ts"]
           },
           "outputs": ["{options.outputFile}"]
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/sdk-core"],
           "options": {
             "jestConfig": "libs/sdk-core/jest.config.js",
@@ -679,9 +679,9 @@
       "root": "apps/sdk-demo",
       "sourceRoot": "apps/sdk-demo/src",
       "prefix": "sdk-demo",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "executor": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/apps/sdk-demo",
             "index": "apps/sdk-demo/src/index.html",
@@ -733,7 +733,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "executor": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "sdk-demo:build"
           },
@@ -748,13 +748,13 @@
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "executor": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "sdk-demo:build"
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/sdk-demo"],
           "options": {
             "jestConfig": "apps/sdk-demo/jest.config.js",
@@ -769,22 +769,22 @@
       "root": "libs/search-widget",
       "sourceRoot": "libs/search-widget/src",
       "projectType": "library",
-      "architect": {
+      "targets": {
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["libs/search-widget/**/*.{ts,svelte,spec.ts}"]
           }
         },
         "check": {
-          "builder": "@nrwl/workspace:run-commands",
+          "executor": "@nrwl/workspace:run-commands",
           "options": {
             "command": "svelte-check",
             "cwd": "libs/search-widget"
           }
         },
         "build": {
-          "builder": "@nrwl/workspace:run-commands",
+          "executor": "@nrwl/workspace:run-commands",
           "options": {
             "commands": [
               "yarn vite build -c=libs/search-widget/vite.config.js && cp -r libs/search-widget/public/i18n dist/libs/search-widget"
@@ -795,7 +795,7 @@
           }
         },
         "build-original": {
-          "builder": "@nxext/svelte:build",
+          "executor": "@nxext/svelte:build",
           "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/libs/search-widget",
@@ -817,7 +817,7 @@
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/search-widget"],
           "options": {
             "jestConfig": "libs/search-widget/jest.config.js",
@@ -831,9 +831,9 @@
       "root": "apps/search-widget-demo",
       "sourceRoot": "apps/search-widget-demo/src",
       "projectType": "application",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@nxext/vite:build",
+          "executor": "@nxext/vite:build",
           "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/search-widget-demo",
@@ -851,26 +851,26 @@
           }
         },
         "serve": {
-          "builder": "@nxext/vite:dev",
+          "executor": "@nxext/vite:dev",
           "options": {
             "outputPath": "dist/apps/search-widget-demo"
           }
         },
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["apps/search-widget-demo/**/*.{ts,svelte,spec.ts}"]
           }
         },
         "check": {
-          "builder": "@nrwl/workspace:run-commands",
+          "executor": "@nrwl/workspace:run-commands",
           "options": {
             "command": "svelte-check",
             "cwd": "apps/search-widget-demo"
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/search-widget-demo"],
           "options": {
             "jestConfig": "apps/search-widget-demo/jest.config.js",
@@ -885,9 +885,9 @@
       "root": "libs/sistema",
       "sourceRoot": "libs/sistema/src",
       "prefix": "nsi",
-      "architect": {
+      "targets": {
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/libs/sistema"],
           "options": {
             "jestConfig": "libs/sistema/jest.config.js",
@@ -895,7 +895,7 @@
           }
         },
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["libs/sistema/src/**/*.ts", "libs/sistema/src/**/*.html"]
           }
@@ -909,9 +909,9 @@
       "root": "apps/sistema-demo",
       "sourceRoot": "apps/sistema-demo/src",
       "prefix": "nsd",
-      "architect": {
+      "targets": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "executor": "@angular-devkit/build-angular:browser",
           "outputs": ["{options.outputPath}"],
           "options": {
             "outputPath": "dist/apps/sistema-demo",
@@ -970,7 +970,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "executor": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
               "browserTarget": "sistema-demo:build:production"
@@ -982,19 +982,19 @@
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "executor": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "sistema-demo:build"
           }
         },
         "lint": {
-          "builder": "@nrwl/linter:eslint",
+          "executor": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": ["apps/sistema-demo/src/**/*.ts", "apps/sistema-demo/src/**/*.html"]
           }
         },
         "test": {
-          "builder": "@nrwl/jest:jest",
+          "executor": "@nrwl/jest:jest",
           "outputs": ["coverage/apps/sistema-demo"],
           "options": {
             "jestConfig": "apps/sistema-demo/jest.config.js",
@@ -1002,7 +1002,7 @@
           }
         }
       },
-      "schematics": {
+      "generators": {
         "@nrwl/angular:component": {
           "inlineStyle": true,
           "style": "scss",
