--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "node-machine-id": "^1.1.12",
     "perfect-scrollbar": "^1.5.0",
     "posthog-js": "^1.17.9",
+    "protobufjs": "^6.11.3",
     "run-script-os": "^1.1.6",
     "rxjs": "7.5.2",
     "spark-md5": "^3.0.1",
