--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@sentry/angular": "^7.2.0",
     "@sentry/tracing": "^7.2.0",
+    "algoliasearch": "^4.13.1",
     "angular-svg-icon": "^13.0.0",
     "child_process": "^1.0.2",
     "core-js": "^3.6.4",
