--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -242,10 +242,11 @@ jobs:
           yarn missdev
       - name: Build desktop app
         run: |-
-          sed -i.bak "s#__DROPBOX_KEY__#${{ secrets.DROPBOX_KEY }}#g" apps/desktop/src/environments/environment.prod.ts
-          sed -i.bak "s#__GOOGLE_CLIENT_ID__#${{ secrets.GOOGLE_CLIENT_ID }}#g" apps/desktop/src/environments/environment.prod.ts
-          sed -i.bak "s#__GOOGLE_API_KEY__#${{ secrets.GOOGLE_API_KEY }}#g" apps/desktop/src/environments/environment.prod.ts
           npx nx build desktop --configuration production
+          sed -i.bak "s#__DROPBOX_KEY__#${{ secrets.DROPBOX_KEY }}#g" ./dist/apps/desktop/main.*.js
+          sed -i.bak "s#__GOOGLE_CLIENT_ID__#${{ secrets.GOOGLE_CLIENT_ID }}#g" ./dist/apps/desktop/main.*.js
+          sed -i.bak "s#__GOOGLE_API_KEY__#${{ secrets.GOOGLE_API_KEY }}#g" ./dist/apps/desktop/main.*.js
+          rm dist/apps/desktop/main.*.js.bak
       - name: Build electron app
         run: |-
           npx nx build desktop-electron --configuration production
